# SFML-Arcade-Game

./: README.md
LLGP-master/: .gitignore  AnimationController.h  Asteroid.cpp  Asteroid.h  Bomb.h  Bullet.cpp  Bullet.h  Button.h  CMakeLists.txt  CircleCollider.cpp  CircleCollider.h  Collider.h  Component.cpp  Component.h  ComponentConcepts.cpp  Crystal.cpp  Crystal.h  CrystalManager.cpp  CrystalManager.h  Enemy.cpp  Enemy.h  Event.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameplayState.cpp  GameplayState.h  Health.cpp  Health.h  LLGP.vcxproj  LLGP.vcxproj.filters  MainMenuState.cpp  MainMenuState.h  Object.h  Physics.cpp  Physics.h  Planetoid.cpp  Planetoid.h  Player.cpp  (+23 more)
LLGP-master/Scripts/: Bomb.cpp  BoxCollider.h  Bullet.cpp  Bullet.h  Button.cpp  CircleCollider.h  ComponentConcepts.h  Crystal.h  CrystalManager.cpp  Game.h  GameObject.cpp  GameObject.h  GameplayState.cpp  GameplayState.h  Health.h  IGameState.h  MakeSound.cpp  MakeSound.h  Planetoid.cpp  PlayerCharacter.cpp  PlayerCharacter.h  Scoring.h  SpriteRenderer.h  StateManager.cpp  Transform.cpp  Transform.h  UI.cpp  WarriorDrone.cpp  WorkerDrone.cpp  WorkerDrone.h
